# bstruct

./: .gitignore  README.md  bstruct.opam  dune-project
lib/: .merlin  bstruct.ml  bstruct.mli  dune
test/: bstruct_test.ml  dune  gen.ml
